<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/whoareyou" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:text="@string/email_address"/>

        <EditText
            android:id="@+id/applicant_email_address"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/applicant_password"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin" />
        
        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:text="@string/first_name"/>
        
        <EditText
            android:id="@+id/applicant_first_name"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin"
            />

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:text="@string/last_name"/>

        <EditText
            android:id="@+id/applicant_last_name"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin"
            />

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:text="@string/phone_number"/>

        <EditText
            android:id="@+id/applicant_phone_number"
            android:inputType="phone"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:text="@string/school"/>

        <EditText
            android:id="@+id/applicant_school"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:text="@string/education_level"/>

        <Spinner
            android:id="@+id/applicant_education_level"
            android:textSize="15sp"
            android:entries="@array/education_level_spinner"
            android:prompt="@string/education_level_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin"
            android:spinnerMode="dialog" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:text="@string/gpa"/>

        <EditText
            android:id="@+id/applicant_gpa"
            android:textSize="15sp"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:text="@string/skills_and_projects"/>

        <EditText
            android:id="@+id/applicant_skills_and_projects"
            android:textSize="15sp"
            android:inputType="textMultiLine"
            android:lines="7"
            android:gravity="top|left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin" />
        
        <Button
            android:id="@+id/applicant_signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin"
            android:textSize="15sp"
            android:text="@string/signup_button"
            android:background="@drawable/gray_button_clicked"
            android:onClick="applicantJoinNowClicked"/>



    </LinearLayout>
</ScrollView>