<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/whoareyou" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:text="@string/email_address"/>

        <EditText
            android:id="@+id/recruiter_email_address"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/recruiter_password"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin" />
        
        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:text="@string/first_name"/>
        
        <EditText
            android:id="@+id/recruiter_first_name"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin"
            />

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:text="@string/last_name"/>

        <EditText
            android:id="@+id/recruiter_last_name"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin"
            />

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:text="@string/phone_number"/>

        <EditText
            android:id="@+id/recruiter_phone_number"
            android:inputType="phone"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:text="@string/company"/>

        <EditText
            android:id="@+id/recruiter_company"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin"
            android:textSize="15sp"
            android:text="@string/signup_button"
            android:background="@drawable/gray_button_clicked"
            android:onClick="recruiterJoinNowClicked"/>

    </LinearLayout>
</ScrollView>