<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/shakein"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/shake_in" />

        <EditText
            android:id="@+id/login_id"
            android:inputType="textEmailAddress"
            android:background="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin"
            android:paddingTop="@dimen/edittext_padding"
            android:paddingBottom="@dimen/edittext_padding"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/login_password"
            android:inputType="textPassword"
            android:background="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin"
            android:paddingTop="@dimen/edittext_padding"
            android:paddingBottom="@dimen/edittext_padding"
            android:hint="@string/password" />

        <Button
            android:id="@+id/signin_button"
            android:background="@drawable/button_clicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="@dimen/signin_button_margin"
            android:layout_marginRight="@dimen/signin_button_margin"
            android:text="Sign in"
            android:textSize="20sp"
            android:onClick="signinButtonClicked"
            />

    </LinearLayout>
</ScrollView>